--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@angular/forms": "^15.1.0",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
-    "@angular/router": "^15.1.0",
+    "node_modules/@angular/router": "^15.1.0",
     "@auth0/angular-jwt": "^5.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
